--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -458,8 +458,7 @@ header .navbar ul li a:hover {
 /* about section ends */
 
 /* skills section starts */
-/* skills media queries starts*/
-@media screen and (max-width: 600px) {
+
 .skills {
   min-height: 90vh;
   background: linear-gradient(to bottom, #57059e, #4a00e0);
@@ -513,7 +512,8 @@ header .navbar ul li a:hover {
   font-family: "Poppins";
   margin-left: 0.5rem;
 }
-
+/* skills media queries starts*/
+@media screen and (max-width: 600px) {
   .skills .container {
     padding: 0;
     margin: 0;
@@ -528,6 +528,14 @@ header .navbar ul li a:hover {
     margin-top: 5px;
     width: 100%;
   }
+  .skills .container .bar {
+  margin-bottom: 15px;
+  padding: 10px;
+  border-radius: 1rem;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 22, 0.9);
+  transition: 0.2s;
+}
 }
 /* skills media queries ends*/
 /* skills section ends */
