--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -524,6 +524,12 @@ header .navbar ul li a:hover {
     padding: 2rem 0.2rem 2rem 0.2rem;
     gap: 1rem;
   }
+   .skills .container .row1 {
+    grid-template-columns: repeat(1, 1fr);
+    margin: 1rem;
+    padding: 2rem 0.2rem 2rem 0.2rem;
+    gap: 1rem;
+  }
   .skills .container {
     margin-top: 5px;
     width: 100%;
